--- a/sample_app/app/views/todolists/index.html.erb
+++ b/sample_app/app/views/todolists/index.html.erb
@@ -1,5 +1,5 @@
 <h1>投稿一覧</h1>
-<%  @list.each do |list| %>
+<%  @lists.each do |list| %>
 <p>タイトル</p>
-<span><% list.title %></span>
+<span><%= list.title %></span>
 <% end %>
